--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,15 @@ body {
     width: 100%;
     background-image: url("assets/wood-background.jpg");
 }
-
+.card-container {
+    margin-top: 3em;
+}
 .card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     height: 25em;
-    margin-top: 2em;
 }
 
 .background-image {
@@ -30,14 +31,13 @@ body {
     width: 80%;
     border-radius: 10px;
     box-shadow: 1px 1px 10px black;
-    margin-top: 1em;
 }
 .food-name {
-    color: white;
+    color: #087F8C;
 }
 
 .food-info {
-    color: white;
+    color: #087F8C;
 }
 
 .order-container {
@@ -45,14 +45,15 @@ body {
     flex-direction: row;
     align-items: center;
     gap: 1em;
-    color: white;
+    color: #087F8C;
 }
 
 .order-button {
     border-radius: 10px;
     border-style: none;
-    background-color: rgb(201, 119, 25);
+    background-color: #087F8C;
     color: white;
-    padding: 0.5em 1em;
+    font-weight: bold;
+    padding: 1em 2em;
     box-shadow: 1px 1px 10px black;
 }
