--- a/shoppingCart.css
+++ b/shoppingCart.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-image: url("assets/wood-591631_960_720.jpg") ;
 }
@@ -5,12 +10,52 @@ body{
 .cart-container{
     display: flex;
     flex-wrap: wrap;
-    width: 5em;
-    margin: 3em auto;
-      
+    margin: 2em 3em;
+   
+}
+
+.cart-header{
+    font-size: 1.2rem;
+    margin-top: 2em;
+}
+
+
+.total-price-container{
+    margin-top: 1em;
+    display: flex;
+
+    justify-content: space-between;
+}
+
+.total-price{
+    font-size: 1rem;
+}
+
+.dish-article{
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1rem;
+}
+
+.place-order{
+    margin-top: 1em;
+    margin-left: 4.5em;
+}
+
+.place-order-btn{
+    margin-top: 1em;
+    width: 10em;
+    height: 3em;
+    border-radius: .3em;
+    
 }
 
 .paper{
-  
+    margin-left: 1em;
+  position: absolute;
+   z-index: -1;
+   width: 90%;
+   height: 80%;
    
 }
