--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,6 @@
 :root {
   --blue: #087f8c;
+  --brown: #784F41;
 }
 * {
   padding: 0;
@@ -67,6 +68,7 @@ body {
 /* Header classes */
 .page-header {
   width: 100%;
+  /* background-color: var(--brown); */
 }
 
 .header-top {
@@ -80,6 +82,7 @@ body {
 .header-top > .top-title {
   flex: 0 0 25%;
   text-align: center;
+  text-shadow: 0 0 15px black;
 }
 
 .header-top > .top-cart,
@@ -207,6 +210,8 @@ body {
   position: fixed;
   width: 100%;
   bottom: 0;
+  background-color: var(--brown);
+  padding: 0.3em;
 }
 
 .nav-list {
