--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100vh;
   width: 100%;
@@ -14,7 +18,35 @@ body {
   font-family: "Berkshire Swash", cursive;
   color: var(--blue);
 }
+
+.container-category {
+  position: relative;
+  height: 3em;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-category > .category-background {
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  z-index: -5;
+}
+
+.container-category > .category-title {
+  text-align: center;
+  max-width: 80%;
+}
+
+.fade {
+  opacity: 0;
+  z-index: -50;
+}
+
 .card-container {
+  transition: 0.25s opacity;
   margin-top: 3em;
   display: flex;
   flex-direction: column;
