--- a/assets/styles/receit.css
+++ b/assets/styles/receit.css
@@ -8,9 +8,11 @@
 } */
 
 .cart-container {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
-  position: relative;
+  position: absolute;
+  top: 7em;
+  z-index: 10;
 }
 
 
