Added js code to show receipt when you clcck the chest

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -126,6 +126,7 @@ body {
 
 .top-cart {
   position: relative;
+  z-index: 15;
 }
 
 .top-cart > .cart-img {
@@ -139,6 +140,7 @@ body {
   background-image: radial-gradient(circle, black 33%, transparent);
   padding: 25%;
   border-radius: 50%;
+ 
 }
 
 .cart-amount > .amount-text {
