--- a/assets/styles/receit.css
+++ b/assets/styles/receit.css
@@ -11,8 +11,25 @@
   display: none;
   flex-wrap: wrap;
   position: absolute;
-  top: 7em;
+  top: 0em;
   z-index: 10;
+  padding-top: 12vh;
+  
+  
+}
+
+.black-background{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  z-index: -2;
+  background-color: rgba(0, 0, 0, 0.705);
+  top: 0;
+  pointer-events: none;
+}
+
+.cart-container.show{
+  display: flex;
 }
 
 
