--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -41,10 +41,10 @@ body {
   max-width: 80%;
 }
 
-.fade {
+ .fade {
   opacity: 0;
   z-index: -50;
-}
+} 
 
 .card-container {
   transition: 0.25s opacity;
@@ -53,13 +53,16 @@ body {
   flex-direction: column;
   gap: 10em;
   padding-bottom: 10em;
+  
 }
+
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   height: 25em;
+  text-align: center;
 }
 
 .card > p {
@@ -247,6 +250,7 @@ body {
   background-color: var(--brown);
   padding: 0.3em;
   z-index: 20;
+  box-shadow: 1px 1px 20px black;
 }
 
 .nav-list {
@@ -265,8 +269,35 @@ body {
   /* background-position: 0 10px; */
 }
 
+
 .list-btn > .btn-img {
   position: relative;
   width: 100%;
   margin: auto auto;
+}
+
+.slide-container {
+  transition: 1s;
+  animation: slideIn .9s ease-in;
+}
+
+@keyframes slideIn {
+  0%{
+    transform: skewX(53deg) translateX(-500px);
+  }
+  60% {
+    transform: translateX(0px);
+  }
+  62% {
+    transform: skewX(0deg) translateX(30px);
+  }
+  70% {
+    transform: skew(-20deg);
+  }
+  80%{
+    transform: skew(0deg) translate(0);
+  }
+  100%{
+    transform: skew(0deg);
+  }
 }
